package com.fahadali.intranet.model;

import lombok.Data;

@Data
public class Room {

    private int id;
    private String roomIdentifier;
}

