package com.fahadali.intranet.model;

import lombok.Data;

@Data
public class Teacher {

    private int id;
    private String name;
    private String email;
}
